Update all template

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-template",
+  "name": "reudavel.com",
   "version": "1.0.0",
   "private": true,
   "description": "",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Reudavel/project-template.git"
+    "url": "git+https://github.com/Reudavel/reudavel.com.git"
   },
   "author": "Raul Eudave",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Reudavel/project-template/issues"
+    "url": "https://github.com/Reudavel/reudavel.com/issues"
   },
-  "homepage": "https://github.com/Reudavel/project-template#readme",
+  "homepage": "https://github.com/Reudavel/reudavel.com#readme",
   "devDependencies": {
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
